--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -9,7 +9,7 @@
     <!-- Add Bootstrap CSS link -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- meta tags end -->
-    <title>Bootstrap 4 Form</title>
+    <title>Js validation Demo</title>
 </head>
 <body>
     <!-- header start -->
