--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -41,7 +41,8 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="fullName">Full Name:</label>
-                        <input type="text" class="form-control" id="fullName" name="fullName" placeholder="Enter Full Name" >
+                        <input type="text" class="form-control" id="fullName" name="fullName" placeholder="Enter Full Name" onmouseover="highlightInput(this)"
+                        onmouseout="resetHighlight(this)">
                         <div id="fullNameError" class="text-danger"></div>
                     </div>
                 </div>
@@ -49,7 +50,8 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="email">Email:</label>
-                        <input type="email" class="form-control" id="email" name="email" placeholder="Enter Email" >
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Enter Email" onmouseover="highlightInput(this)"
+                        onmouseout="resetHighlight(this)">
                         <div id="emailError" class="text-danger"></div>
                     </div>
                 </div>
@@ -62,7 +64,8 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="phoneNumber">Phone Number:</label>
-                        <input type="text" class="form-control" id="phoneNumber" name="phoneNumber" placeholder="Enter Phone Number" >
+                        <input type="text" class="form-control" id="phoneNumber" name="phoneNumber" placeholder="Enter Phone Number" onmouseover="highlightInput(this)"
+                        onmouseout="resetHighlight(this)">
                         <div id="phoneError" class="text-danger"></div>
                     </div>
                 </div>
@@ -87,7 +90,8 @@
                 <div class="col-md-12">
                     <div class="form-group">
                         <label for="address">Address:</label>
-                        <textarea rows="5" class="form-control" id="address" name="address" placeholder="Enter Address" ></textarea>
+                        <textarea rows="5" class="form-control" id="address" name="address" placeholder="Enter Address" onmouseover="highlightInput(this)"
+                        onmouseout="resetHighlight(this)"></textarea>
                         <div id="addressError" class="text-danger"></div>
                     </div>
                 </div>
@@ -100,7 +104,8 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <label for="role">Select Job Role:</label>
-                        <select class="form-control" id="role" name="role">
+                        <select class="form-control" id="role" name="role" onmouseover="highlightInput(this)"
+                        onmouseout="resetHighlight(this)">
                             <option>Select</option>
                             <optgroup label="Technical Jobs">
                                 <option value="1">Full Stack Developer</option>
@@ -117,7 +122,7 @@
                 </div>
                
                 <div class="col-md-6">
-                    <div class="form-group">
+                    <div class="form-group" >
                         <label>Select Your Skills:</label>
                         <div>
                             <input type="checkbox" name="skills[]" id="c++" value="C++">
@@ -154,7 +159,8 @@
                 <div class="col-md-12">
                     <div class="form-group">
                         <label for="resume">Upload Your Resume:</label>
-                        <input type="file" class="form-control-file" id="resume" name="resume" accept=".pdf">
+                        <input type="file" class="form-control-file" id="resume" name="resume" accept=".pdf" onmouseover="highlightInput(this)"
+                        onmouseout="resetHighlight(this)">
                         <div id="resumeError" class="text-danger"></div>
                     </div>
                 </div>
@@ -178,7 +184,16 @@
 
     <!-- JavaScript validation function -->
     <script src="validation.js"></script>
+  <!-- JavaScript for mouse events -->
+  <script>
+    function highlightInput(input) {
+        input.style.border = "2px solid blue"; // Highlight input field when mouse is over
+    }
 
+    function resetHighlight(input) {
+        input.style.border = ""; // Reset highlight when mouse moves out
+    }
+</script>
     <!-- Add Bootstrap JS -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
