--- a/jQuery/functions/index.html
+++ b/jQuery/functions/index.html
@@ -14,6 +14,8 @@
         <li>Callback</li>
         <li>Deferred</li>
         <li>Promise</li>
+        
+     <button id="myButton">Click me to trigger custom event</button>
     </ul>
     
     <script src="functions.js"></script>
