update error place

--- a/jQuery/Validation/form.html
+++ b/jQuery/Validation/form.html
@@ -56,7 +56,7 @@
                
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label>Gender:</label>
+                        <label for="gender">Gender:</label>
                         <div>
                             <input type="radio" name="gender" id="male" value="male">
                             <label for="male">Male</label>
@@ -106,7 +106,7 @@
                
                 <div class="col-md-6">
                     <div class "form-group">
-                        <label>Select Your Skills:</label>
+                        <label for="skill">Select Your Skills:</label>
                         <div>
                             <input type="checkbox" name="skills[]" id="c++" value="C++">
                             <label for="c++">C++</label>
