--- a/DevExtreme/Editors/index.html
+++ b/DevExtreme/Editors/index.html
@@ -20,5 +20,6 @@
     <button class="menu"><a href="/TextArea/TextArea.html" target="_blank">TextArea</a></button>
     <button class="menu"><a href="/TextBox/TextBox.html" target="_blank">TextBox</a></button>
     <button class="menu"><a href="/Button/Button.html" target="_blank">Button</a></button>
+    <button class="menu"><a href="/FileUploader/FileUploader.html" target="_blank">FileUploader</a></button>
 </body>
 </html>
