--- a/DevExtreme/Editors/FileUploader/FileUploader.html
+++ b/DevExtreme/Editors/FileUploader/FileUploader.html
@@ -3,8 +3,22 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <script type="text/javascript" src="../Scripts/jquery-3.5.1.min.js"></script>
+    <!-- DevExtreme themes -->
+    <link rel="stylesheet" href="../Content/dx.common.css">
+    <link rel="stylesheet" href="../Content/dx.light.css">
+    <!-- DevExtreme library -->
+    <script type="text/javascript" src="../Scripts/dx.all.js"></script>
+    <!--custom files-->
+    <link rel="stylesheet" href="FileUploader.css">
+    <script type="text/javascript" src="FileUploader.js"></script>
 </head>
 <body>
-
+    <div class="FileUploaders">
+        <div class="FileUploader">
+            <label>File Uploader</label>
+            <div id="imgUploader"></div>
+        </div>
+    </div>
 </body>
 </html>
