--- a/DevExtreme/Editors/FileUploader/FileUploader.html
+++ b/DevExtreme/Editors/FileUploader/FileUploader.html
@@ -19,6 +19,33 @@
             <label>File Uploader</label>
             <div id="imgUploader"></div>
         </div>
+        <div class="FileUploader">
+            <label>Dialog Trigger</label>
+            <div>
+                <img id="uploadImg" src="../Assets/upload.png" />
+            </div>
+            <div id="dialogBox"></div>
+        </div>
+        <div class="FileUploader">
+            <label>File Uploader useButtons</label>
+            <div id="useButton"></div>
+        </div>
+        <div class="FileUploader">
+            <form action="https://js.devexpress.com/Demos/NetCore/FileUploader/Upload" method="post" enctype="multipart/form-data">
+                <label>file upload using form</label>
+                <div id="file"></div>
+                <button type="submit">Upload</button>
+            </form>
+        </div>
+        <div class="FileUploader">
+            <label>File Abort</label>
+            <div id="abort-file"></div>
+        </div>
+        <div class="FileUploader">
+            <label>File Upload</label>
+            <div id="upload-file"></div>
+        </div>
+
     </div>
 </body>
 </html>
