--- a/DevExtreme/Editors/index.html
+++ b/DevExtreme/Editors/index.html
@@ -21,5 +21,7 @@
     <button class="menu"><a href="/TextBox/TextBox.html" target="_blank">TextBox</a></button>
     <button class="menu"><a href="/Button/Button.html" target="_blank">Button</a></button>
     <button class="menu"><a href="/FileUploader/FileUploader.html" target="_blank">FileUploader</a></button>
+    <button class="menu"><a href="/Validator/Validator.html" target="_blank">Validator</a></button>
+    <button class="menu"><a href="/RadioGroup/RadioGroup.html" target="_blank">RadioGroup</a></button>
 </body>
 </html>
